# aegae

./: README.md  pyproject.toml
src/aegae/: __init__.py
src/notebooks/tutorials/: 01-vector-add.ipynb  02-fused-softmax.ipynb  03-matrix-multiplication.ipynb  04-low-memory-dropout.ipynb  05-layer-norm.ipynb  06-fused-attention.ipynb  README.md
